# semiliterate

./: .copier-answers.ci.yml  .gitignore  .nav.yml  LICENSE  README.md  _config.yml  action.yml  pyproject.toml
.github/: bump.sh  dependabot.yml
.github/workflows/: release.yml  site.yml  test.yml
semiliterate/: __init__.py  cli.py  config.py  extractor.py  materialize.py  scanner.py
tests/: test_extractor.py  test_materialize_cli.py  test_scanner.py
