[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semiliterate"
version = "0.1.0"
description = "Standalone semiliterate extraction engine and CLI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Allison Thackston" },
]
keywords = [
    "semiliterate",
    "markdown",
    "documentation",
    "extraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
semiliterate = "semiliterate.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/athackst/semiliterate"
Issues = "https://github.com/athackst/semiliterate/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/semiliterate",
    "/tests",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["semiliterate"]
